--- a/src/components/CreateForm/style.less
+++ b/src/components/CreateForm/style.less
@@ -1,12 +1,12 @@
-
-.formWrapper{
-    :global {
-        .ant-select{
-            width: 100%
-        }
-        .ant-form-item{
-            margin-bottom: 10px;
-        }    
+.formWrapper {
+  :global {
+    .ant-btn,
+    .ant-btn:hover,
+    .ant-btn:focus {
+      width: 20%;
     }
-    
+    // .ant-form-item{
+    //     margin-bottom: 10px;
+    // }
+  }
 }
