--- a/src/global.less
+++ b/src/global.less
@@ -9,6 +9,33 @@ body,
 .colorWeak {
   filter: invert(80%);
 }
+.ant-pro-basicLayout-content {
+  margin: 0 !important;
+  padding: 24px !important;
+  background: #fff;
+}
+
+.clearfix:after {
+  /*伪元素是行内元素 正常浏览器清除浮动方法*/
+  content: '';
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.clearfix {
+  *zoom: 1; /*ie6清除浮动的方式 *号只有IE6-IE7执行，其他浏览器不执行*/
+}
+
+.textCenter {
+  text-align: center;
+}
+.textLeft {
+  text-align: left;
+}
+.textRight {
+  text-align: right;
+}
 
 .ant-layout {
   min-height: 100vh;
