--- a/src/components/CreateForm/style.less
+++ b/src/components/CreateForm/style.less
@@ -5,8 +5,8 @@
     .ant-btn:focus {
       width: 20%;
     }
-    // .ant-form-item{
-    //     margin-bottom: 10px;
-    // }
+    .ant-form-item {
+      padding-bottom: 5px;
+    }
   }
 }
