--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -94,3 +94,68 @@
     }
   }
 }
+
+// basicLayout样式
+:global {
+  .menuWrap {
+    .ant-menu-inline {
+      border: none;
+    }
+
+    // .ant-drawer-body{
+    //   padding-bottom: 60px;
+    // }
+  }
+}
+
+.basicLayout {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  .silder {
+    height: 100%;
+    color: #000;
+  }
+  .logoTitle {
+    height: 64px;
+    line-height: 64px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 1px solid #e8e8e8;
+    color: #1890ff;
+  }
+  .menuWrap {
+    border-right: 1px solid #e8e8e8;
+    width: 100%;
+    height: 100%;
+  }
+
+  .layoutContent {
+    flex: 1;
+    .layoutHeader {
+      height: 64px;
+      border-bottom: 1px solid #e8e8e8;
+      .headerIcon {
+        float: left;
+      }
+      .headerNav {
+        float: right;
+        line-height: 64px;
+        padding-right: 20px;
+        img {
+          width: 30px;
+          height: 30px;
+          border-radius: 100%;
+          vertical-align: middle;
+          display: inline-block;
+        }
+      }
+    }
+    .layoutContainer {
+      height: calc(100% - 64px);
+      overflow: auto;
+      padding: 20px;
+    }
+    // .layoutContainer::-webkit-scrollbar { width: 0 !important }
+  }
+}
