--- a/src/global.less
+++ b/src/global.less
@@ -113,6 +113,36 @@ ol {
   list-style: none;
 }
 
+// enter是入场前的刹那（点击按钮），appear指页面第一次加载前的一刹那（自动）
+.fade1-enter,
+.fade-appear {
+  height: 0;
+}
+//enter-active指入场后到入场结束的过程，appear-active则是页面第一次加载自动执行
+.fade1-enter-active,
+.fade-appear-active {
+  height: 100%;
+  transition: 1s;
+}
+//入场动画执行完毕后，保持状态
+.fade1-enter-done {
+  height: 100%;
+}
+//同理，出场前的一刹那，以下就不详细解释了，一样的道理
+.fade1-exit {
+  height: 100%;
+}
+
+.fade1-exit-active {
+  height: 0;
+  transition: 1s;
+}
+
+.fade1-exit-done {
+  height: 0;
+  overflow: hidden;
+}
+
 @media (max-width: @screen-xs) {
   .ant-table {
     width: 100%;
