--- a/src/pages/Goods/GoodsInKind/GoodsManagement/styles.less
+++ b/src/pages/Goods/GoodsInKind/GoodsManagement/styles.less
@@ -28,24 +28,69 @@
       flex: 1;
     }
   }
+
   :global {
-    // .ant-card-head{
-    //     min-height: 30px;
-    // }
-    .ant-card-head-title {
-      // padding: 10px 0;
-      font-size: 14px;
-    }
     .ant-drawer-body {
       padding-bottom: 70px;
     }
+  
+  }
+
+  .specificationsWrap{
+
+    :global {
+      .ant-form-item {
+        margin-bottom: 0;
+      }
+      
+    }
+    
+    
+    .specificationsList{
+      box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+      padding: 20px;
+      display: flex;
+      margin-bottom: 20px;
+      .specificationsTitle{
+        width: auto;
+      }
+      .specificationsContent{
+        flex: 1;
+        padding-left: 20px;
+        .specificationsContentItem{
+          float: left;
+          margin-right: 20px;
+          margin-bottom: 20px;
+          .itemImg{
+            width: 50px;
+            height: 50px;
+            justify-content: center;
+            border: 1px solid #efefef;
+            border-radius: 5px;
+            overflow: hidden;
+            background: #f8f8f8;
+            margin-bottom: 10px;
+            img{
+              display: block;
+              width: auto;
+              height: auto;
+              max-width: 100%;
+              max-height: 100%;
+            }
+          }
+          .specificationsCheckBox{
+            float: left;
+            margin-right: 5px;
+          }
+          .specificationsInput{
+            float: left;
+          }
+        }
+      }
+    }
+    
   }
 }
 
-:global {
-  .addGoodsWrap {
-    .ant-drawer-body {
-      padding-bottom: 70px;
-    }
-  }
-}
+
+
