--- a/src/pages/Goods/goodsStyles.less
+++ b/src/pages/Goods/goodsStyles.less
@@ -9,6 +9,28 @@
       flex: 1;
     }
   }
+
+  .logoWrap {
+    margin-top: 20px;
+    width: 100px;
+    height: 100px;
+    border: 1px dashed #ccc;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // padding-top: 40px;
+    cursor: pointer;
+    img {
+      display: block;
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
 }
 
 // .Addspecifications{
@@ -119,6 +141,40 @@
     }
     .content {
       flex: 1;
+    }
+  }
+}
+
+.AddGoods {
+  :global {
+    .ant-page-header {
+      padding: 0 0 24px 0;
+    }
+    .ant-page-header-heading-title {
+      font-size: 18px;
+    }
+  }
+  .formWrap {
+    display: flex;
+    margin-bottom: 15px;
+    .formLabel {
+      width: 80px;
+      text-align: right;
+      padding: 4px 12px 0 0;
+    }
+    .content {
+      flex: 1;
+    }
+  }
+  .nameWrap {
+    position: relative;
+    .icon {
+      color: red;
+      font-size: 18px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      cursor: pointer;
     }
   }
 }
