--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Ant Design Pro</title>
+    <title>挂车管家</title>
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
   </head>
   <body>
@@ -166,3 +166,14 @@
     </div>
   </body>
 </html>
+<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=7456de5e90a1be2a58600fa5c714d63b&plugin=AMap.Autocomplete"></script>
+<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+<script>
+  window.onload=function(){
+    const obj ={
+      cip:returnCitySN['cip'],
+      cname:returnCitySN['cname']
+    }
+    localStorage.setItem('cityData',JSON.stringify(obj))
+  }
+</script>
