完成添加商品时添加sku图片

--- a/src/components/CreateForm/style.less
+++ b/src/components/CreateForm/style.less
@@ -2,6 +2,7 @@
   .itemWrap {
     display: flex;
     .itemLabel {
+      position: relative;
       width: 80px;
       text-align: right;
       padding-top: 4px;
