--- a/src/global.less
+++ b/src/global.less
@@ -133,6 +133,19 @@ ol {
   list-style: none;
 }
 
+.ant-carousel .slick-slide {
+  text-align: center;
+  height: 160px;
+  line-height: 160px;
+  background: #364d79;
+
+  overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+  color: #fff;
+}
+
 // enter是入场前的刹那（点击按钮），appear指页面第一次加载前的一刹那（自动）
 .fade1-enter,
 .fade-appear {
